git-svn-id: svn://localhost/trunk@947 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/vc7/sstuff.vcproj
+++ b/surfit/vc7/sstuff.vcproj
@@ -816,6 +816,9 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath="..\src\sstuff\sizetvec.cpp">
+				</File>
+				<File
 					RelativePath="..\src\sstuff\strvec.cpp">
 					<FileConfiguration
 						Name="Debug|Win32">
@@ -1496,6 +1499,9 @@
 				</File>
 				<File
 					RelativePath="..\src\sstuff\shortvec.h">
+				</File>
+				<File
+					RelativePath="..\src\sstuff\sizetvec.h">
 				</File>
 				<File
 					RelativePath="..\src\sstuff\strvec.h">
