regexp support, see changes for details
git-svn-id: svn://localhost/trunk@954 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/vc7/surfit_io.vcproj
+++ b/surfit/vc7/surfit_io.vcproj
@@ -1237,6 +1237,9 @@
 				Name="cntr_cpp"
 				Filter="">
 				<File
+					RelativePath="..\src\surfit_io\cntr_bln.cpp">
+				</File>
+				<File
 					RelativePath="..\src\surfit_io\cntr_io_tcl.cpp">
 					<FileConfiguration
 						Name="Release|Win32">
