regexp support for contour, contour_add gridding rules
git-svn-id: svn://localhost/trunk@956 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -308,6 +308,7 @@ libsurfit_io_la_SOURCES =  src/surfit_io/area_bln.cpp
 libsurfit_io_la_SOURCES += src/surfit_io/area_io_tcl.cpp           
 libsurfit_io_la_SOURCES += src/surfit_io/area_shp.cpp              
 libsurfit_io_la_SOURCES += src/surfit_io/cntr_io_tcl.cpp           
+libsurfit_io_la_SOURCES += src/surfit_io/cntr_bln.cpp              
 libsurfit_io_la_SOURCES += src/surfit_io/cntr_shp.cpp              
 libsurfit_io_la_SOURCES += src/surfit_io/curv_bln.cpp              
 libsurfit_io_la_SOURCES += src/surfit_io/curv_io_tcl.cpp           
