wildcards support (step1)
git-svn-id: svn://localhost/trunk@958 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -46,7 +46,8 @@ libsstuff_ladir = $(prefix)/include/sstuff
 libsstuff_la_SOURCES =  src/sstuff/bitvec.cpp       
 libsstuff_la_SOURCES += src/sstuff/boolvec.cpp      
 libsstuff_la_SOURCES += src/sstuff/datafile.cpp     
-libsstuff_la_SOURCES += src/sstuff/fileio.cpp       
+libsstuff_la_SOURCES += src/sstuff/fileio.cpp    
+   libsstuff_la_SOURCES += src/sstuff/findfile.cpp
 libsstuff_la_SOURCES += src/sstuff/geom_alg.cpp     
 libsstuff_la_SOURCES += src/sstuff/interp.cpp       
 libsstuff_la_SOURCES += src/sstuff/intvec.cpp       
@@ -82,6 +83,7 @@ libsstuff_la_HEADERS += src/sstuff/byteswap_alg.h
 libsstuff_la_HEADERS += src/sstuff/config.h       
 libsstuff_la_HEADERS += src/sstuff/datafile.h     
 libsstuff_la_HEADERS += src/sstuff/fileio.h       
+libsstuff_la_HEADERS += src/sstuff/findfile.h       
 libsstuff_la_HEADERS += src/sstuff/geom_alg.h     
 libsstuff_la_HEADERS += src/sstuff/interp.h       
 libsstuff_la_HEADERS += src/sstuff/intvec.h       
