--- a/surfit/vc7/sstuff.vcproj
+++ b/surfit/vc7/sstuff.vcproj
@@ -387,6 +387,9 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\src\sstuff\findfile.cpp">
+			</File>
+			<File
 				RelativePath="..\src\sstuff\geom_alg.cpp">
 				<FileConfiguration
 					Name="Debug|Win32">
@@ -1472,6 +1475,9 @@
 			</File>
 			<File
 				RelativePath="..\src\sstuff\fileio.h">
+			</File>
+			<File
+				RelativePath="..\src\sstuff\findfile.h">
 			</File>
 			<File
 				RelativePath="..\src\sstuff\geom_alg.h">
