--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -4,7 +4,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "surfit manual"
-PROJECT_NUMBER         = 2.1
+PROJECT_NUMBER         = 2.2
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
@@ -107,6 +107,7 @@ INPUT                  = src/install.doc \
 			 src/surfit_io.doc \
 			 src/boosters.doc \
 			 src/compare.doc \
+			 src/regexp.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
