--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -137,6 +137,7 @@ libsurfit_la_SOURCES += src/surfit/f_area_surf_ineq.cpp
 libsurfit_la_SOURCES += src/surfit/f_area_ineq.cpp                                               
 libsurfit_la_SOURCES += src/surfit/f_area_mean.cpp                                               
 libsurfit_la_SOURCES += src/surfit/f_area_wmean.cpp                                              
+libsurfit_la_SOURCES += src/surfit/f_area_hist.cpp
 libsurfit_la_SOURCES += src/surfit/f_cntr.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_cntr_ineq.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_completer.cpp                                               
@@ -229,6 +230,7 @@ libsurfit_la_HEADERS += src/surfit/f_area_surf_ineq.h
 libsurfit_la_HEADERS += src/surfit/f_area_ineq.h       
 libsurfit_la_HEADERS += src/surfit/f_area_mean.h       
 libsurfit_la_HEADERS += src/surfit/f_area_wmean.h      
+libsurfit_la_HEADERS += src/surfit/f_area_hist.h
 libsurfit_la_HEADERS += src/surfit/f_cntr.h      
 libsurfit_la_HEADERS += src/surfit/f_cntr_ineq.h 
 libsurfit_la_HEADERS += src/surfit/f_curv.h                 
