git-svn-id: svn://localhost/trunk@1009 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -107,7 +107,8 @@ INPUT                  = src/install.doc \
 			 src/surfit_io.doc \
 			 src/boosters.doc \
 			 src/compare.doc \
-			 src/regexp.doc \
+			 src/stringmatch.doc \
+			 src/filematch.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
