surf_trace_cntr - new command for contouring.
git-svn-id: svn://localhost/trunk@1014 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -123,6 +123,7 @@ libsurfit_la_SOURCES += src/surfit/cmofs.cpp
 libsurfit_la_SOURCES += src/surfit/cntr.cpp                                                      
 libsurfit_la_SOURCES += src/surfit/cntr_internal.cpp                                             
 libsurfit_la_SOURCES += src/surfit/cntr_tcl.cpp                                                  
+libsurfit_la_SOURCES += src/surfit/cntr_trace.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/curv.cpp                                                      
 libsurfit_la_SOURCES += src/surfit/curvs_tcl.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/curv_internal.cpp                                             
@@ -220,6 +221,7 @@ libsurfit_la_HEADERS += src/surfit/curv.h
 libsurfit_la_SOURCES += src/surfit/curvs_tcl.h         
 libsurfit_la_HEADERS += src/surfit/curv_internal.h     
 libsurfit_la_SOURCES += src/surfit/curv_tcl.h          
+libsurfit_la_SOURCES += src/surfit/curv_trace.h          
 libsurfit_la_HEADERS += src/surfit/surfit_data.h              
 libsurfit_la_HEADERS += src/surfit/data_manager.h      
 libsurfit_la_HEADERS += src/surfit/free_elements.h     
