--- a/surfit/vc7/sstuff.vcproj
+++ b/surfit/vc7/sstuff.vcproj
@@ -93,8 +93,10 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Gs /Gs "
 				Optimization="2"
+				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="2"
 				ImproveFloatingPointConsistency="TRUE"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="../sstuff/src,../src/sstuff/ptypes,C:\Tcl\include\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
